--- a/course/app/scss/components/feedback.scss
+++ b/course/app/scss/components/feedback.scss
@@ -1,50 +1,44 @@
 @use '../util' as *;
 
 .feedback {
+  display: block;
+  position: relative;
+  padding: 0 !important;
+  margin: 0 auto rem(25);
+  border: rem(50) solid var(--black);
+
   &__inner {
-    color: var(--white);
-    position: relative;
-    max-width: rem(1000);
-    margin: 0 auto;
-    margin-bottom: rem(80);
-    border: rem(50) solid #000;
-  }
-
-  &__bg {
-    height: rem(600);
-    background: url('../images/content/feedback.png') no-repeat 50% 50% / contain fixed;
-  }
-
-  form {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    flex-wrap: wrap;
+  }
+
+  form {
     font-size: rem(20);
 
-    >* {
+    >*:not(:last-child) {
       width: 100%;
-      margin: rem(20);
+      margin-bottom: rem(40);
       border-width: 0;
       box-shadow: none;
       padding: rem(25);
-      background-color: hsla(0, 0%, 100%, .5);
+      background-color: hsla(0, 0%, 0%, .7);
 
+      &,
       &::placeholder {
-        color: #fff;
-        font-size: rem(14);
-        font-family: var(--font-body);
+        color: var(--white);
+        font-size: rem(16);
       }
     }
 
     button {
-      background-color: #000;
-      color: #fff;
+      background-color: var(--black);
+      color: var(--white);
       padding: rem(20);
       width: 50%;
       position: relative;
-      top: rem(130);
+      top: rem(196);
       left: 50%;
       transform: translateX(-50%);
       font-size: rem(25);
