fix vacancy search

--- a/course/app/scss/components/job.scss
+++ b/course/app/scss/components/job.scss
@@ -26,13 +26,9 @@
         margin-left: rem(20);
       }
     }
-  }
 
-  &__sub {
-    display: flex;
-    justify-content: space-between;
-
-    &:nth-child(2) {
+    .demand {
+      float: right;
       opacity: .5;
     }
   }
