--- a/course/app/scss/components/admin.scss
+++ b/course/app/scss/components/admin.scss
@@ -100,6 +100,8 @@
   font-weight: 700;
   background-color: var(--gray);
   position: relative;
+  text-align: center;
+  width: rem(425);
 
   &::before {
     content: '';
