--- a/course/app/scss/globals/boilerplate.scss
+++ b/course/app/scss/globals/boilerplate.scss
@@ -88,7 +88,7 @@ body {
 	#ocean {
 		position: absolute;
 		top: rem(800);
-		width: 100%;
+		width: 100vw;
 		height: rem(250);
 		background-color: var(--white);
 	}
