--- a/course/app/scss/globals/typography.scss
+++ b/course/app/scss/globals/typography.scss
@@ -112,6 +112,7 @@ input[type=submit] {
 	padding: rem(25);
 	font-size: rem(30);
 	font-weight: 700;
+	font-family: var(--font-brand);
 	text-transform: uppercase;
 	position: fixed;
 	z-index: 3;
