--- a/course/app/scss/components/description.scss
+++ b/course/app/scss/components/description.scss
@@ -3,6 +3,7 @@
 .description {
   display: flex;
   align-items: center;
+  text-align: right;
 
   >* {
     width: 50%;
@@ -56,7 +57,7 @@
         background-color: rgb(10, 184, 111, .8) !important;
 
         &::before {
-          content: 'Диктор' !important;
+          content: 'Бухгалтер' !important;
         }
       }
 
