--- a/course/app/scss/components/feedback.scss
+++ b/course/app/scss/components/feedback.scss
@@ -1,5 +1,9 @@
 @use '../util' as *;
 
+section:has(.feedback) h2 {
+  text-align: center;
+}
+
 .feedback {
   display: block;
   position: relative;
@@ -37,6 +41,7 @@
       color: var(--white);
       padding: rem(20);
       width: 50%;
+      border: none;
       position: relative;
       top: rem(196);
       left: 50%;
