message sending to email & update job slider

--- a/course/app/scss/components/admin.scss
+++ b/course/app/scss/components/admin.scss
@@ -64,7 +64,7 @@
   .img-wrapper {
     height: rem(400);
     overflow: hidden;
-    transition: .3s ease-in-out;
+    transition: var(--transition);
     display: block;
 
     &:hover {
