--- a/course/app/scss/globals/fonts.scss
+++ b/course/app/scss/globals/fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
-	font-family: Atomed;
-	src: url('../assets/fonts/atomed.otf') format('opentype');
+	font-family: Despairs;
+	src: url('../assets/fonts/despairs.ttf') format('truetype');
 }
 
 :root {
 	--transition: .3s ease-in-out;
 	--font-body: Arial, sans-serif;
-	--font-brand: Atomed;
+	--font-brand: Despairs;
 }
