--- a/course/app/scss/components/admin.scss
+++ b/course/app/scss/components/admin.scss
@@ -6,13 +6,13 @@
 
   &:has(table) {
     overflow-x: scroll;
-    box-shadow: rem(1) 0 0 var(--gray) inset,
-      rem(-1) 0 0 var(--gray) inset;
+    box-shadow: rem(1) 0 0 var(--gray-400) inset,
+      rem(-1) 0 0 var(--gray-400) inset;
   }
 
   &__table {
     border-collapse: collapse;
-    border-color: var(--gray);
+    border-color: var(--gray-400);
     width: 100%;
 
     th,
@@ -64,7 +64,7 @@
   .img-wrapper {
     height: rem(400);
     overflow: hidden;
-    transition: var(--transition);
+    transition: var(--transition-min);
     display: block;
 
     &:hover {
@@ -98,7 +98,7 @@
   border-radius: rem(25);
   color: var(--white);
   font-weight: 700;
-  background-color: var(--gray);
+  background-color: var(--gray-400);
   position: relative;
   text-align: center;
   width: rem(425);
@@ -108,7 +108,7 @@
     width: rem(25);
     height: rem(25);
     display: inline-block;
-    background-color: var(--gray);
+    background-color: var(--gray-400);
     clip-path: polygon(50% 0, 0 100%, 100% 100%);
     position: absolute;
     top: rem(-25);
