--- a/course/app/scss/components/hero.scss
+++ b/course/app/scss/components/hero.scss
@@ -1,21 +1,15 @@
 @use '../util' as *;
 
 .hero {
-  display: flex;
-  align-items: center;
   min-height: rem(875);
   font-size: rem(40);
   background-color: var(--black);
   color: var(--white);
   margin-bottom: rem(200);
+  position: relative;
 
   &__inner {
-    width: 100vw;
-    position: relative;
-    z-index: 2;
-
-    div {
-      max-width: rem(500);
-    }
+    max-width: rem(500);
+    transform: translateY(50%);
   }
 }
