--- a/course/app/scss/globals/colors.scss
+++ b/course/app/scss/globals/colors.scss
@@ -1,7 +1,9 @@
 :root {
 	--white: hsl(0, 0%, 100%);
-	--gray: hsl(210, 11%, 71%);
+	--gray-400: hsl(210, 10%, 70%);
+	--gray-700: hsl(0, 0%, 16%);
+	--gray-800: hsl(0, 0%, 14%);
 	--black: hsl(0, 0%, 0%);
 
-	--brand: hsl(45, 100%, 51%);
+	--brand: hsl(45, 100%, 50%);
 }
