--- a/course/app/scss/globals/typography.scss
+++ b/course/app/scss/globals/typography.scss
@@ -6,6 +6,7 @@ h3 {
 	margin: 0 0 rem(40);
 	line-height: 1.1;
 	position: relative;
+	text-transform: uppercase;
 }
 
 h1 {
@@ -47,9 +48,9 @@ a {
 
 input:not([type=radio]),
 textarea {
-	border: rem(2) solid var(--gray);
+	border: rem(2) solid var(--gray-400);
 	padding: rem(12) rem(80) rem(12) rem(20);
-	box-shadow: rem(-6) 0 0 var(--gray) inset;
+	box-shadow: rem(-6) 0 0 var(--gray-400) inset;
 }
 
 textarea {
@@ -71,7 +72,7 @@ input[type=submit] {
 	color: var(--brand);
 	background-color: transparent;
 	border: rem(2) solid var(--brand);
-	transition: var(--transition);
+	transition: var(--transition-min);
 	padding: rem(5) rem(20);
 	border-radius: rem(10);
 	box-shadow: none;
@@ -79,7 +80,7 @@ input[type=submit] {
 
 	img {
 		position: relative;
-		transition: var(--transition);
+		transition: var(--transition-min);
 		left: rem(70);
 	}
 
@@ -110,25 +111,25 @@ input[type=submit] {
 
 .logo {
 	padding: rem(25);
-	font-size: rem(30);
 	font-weight: 700;
+	font-size: rem(30);
 	font-family: var(--font-brand);
 	text-transform: uppercase;
 	position: fixed;
 	z-index: 3;
 	color: var(--white);
-	background: var(--black);
+	background-color: var(--black);
+	// float: left;
 
 	&::after {
 		content: '';
-		width: 100%;
-		height: rem(40);
-		transition: var(--transition);
-		background-color: var(--black);
 		position: absolute;
 		top: rem(70);
 		left: 0;
-		z-index: -1;
+		width: 100%;
+		height: rem(40);
+		background-color: var(--black);
+		transition: var(--transition-min);
 		clip-path: polygon(50% 50%, 100% 100%, 100% 0, 0 0, 0 100%);
 	}
 
