--- a/course/app/scss/components/description.scss
+++ b/course/app/scss/components/description.scss
@@ -5,6 +5,17 @@
   align-items: center;
   text-align: right;
 
+  @include breakpoint-down(medium) {
+    flex-direction: column;
+    text-align: center;
+    margin: rem(100) 0;
+
+    &__inner {
+      width: 100% !important;
+      margin-bottom: rem(50);
+    }
+  }
+
   >* {
     width: 50%;
   }
