--- a/course/app/scss/components/feedback.scss
+++ b/course/app/scss/components/feedback.scss
@@ -18,6 +18,12 @@ section:has(.feedback) h2 {
     transform: translate(-50%, -50%);
   }
 
+  iframe {
+    border: none;
+    width: 100%;
+    height: rem(600);
+  }
+
   form {
     font-size: rem(20);
 
@@ -39,11 +45,10 @@ section:has(.feedback) h2 {
     button {
       background-color: var(--black);
       color: var(--white);
-      padding: rem(20);
-      width: 50%;
+      padding: rem(20) rem(50);
       border: none;
       position: relative;
-      top: rem(94);
+      top: rem(96);
       left: 50%;
       transform: translateX(-50%);
       font-size: rem(25);
