--- a/course/app/scss/components/job.scss
+++ b/course/app/scss/components/job.scss
@@ -6,6 +6,7 @@
   flex-direction: column-reverse;
 
   &__slider {
+    display: flex;
     position: relative;
   }
 
@@ -29,7 +30,7 @@
 
     .demand {
       float: right;
-      opacity: .5;
+      color: var(--gray-400);
     }
   }
 
@@ -37,7 +38,6 @@
     filter: grayscale(1);
     width: rem(50);
     margin: 0 auto;
-    display: block;
     transition: var(--transition-min);
 
     &--wide {
@@ -52,9 +52,17 @@
       filter: none;
     }
 
-    p {
-      margin-bottom: 0;
-      text-align: center;
+    div {
+      flex-direction: column;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
+
+      p {
+        text-align: center;
+        margin-bottom: 0;
+        margin-left: 0;
+      }
     }
   }
 
