--- a/course/app/scss/components/header.scss
+++ b/course/app/scss/components/header.scss
@@ -1,11 +1,23 @@
 @use '../util' as *;
 
 .header {
+  background-color: var(--white);
+  font-weight: 700;
+
+  @include breakpoint-down(medium) {
+    div.menu {
+      display: none;
+    }
+
+    div.menu__outer {
+      display: block;
+      padding: 0 !important;
+    }
+  }
 
   .menu {
     box-shadow: 0 0 rem(10) var(--black) inset;
     background: var(--gray-400);
-    position: sticky;
     display: block;
     width: 100%;
 
@@ -29,7 +41,8 @@
         display: block;
 
         &:hover {
-          box-shadow: 0 rem(10) 0 var(--brand) inset;
+          color: var(--white);
+          box-shadow: 0 rem(10) 0 var(--white) inset;
         }
       }
     }
@@ -38,10 +51,43 @@
   .menu__top>* {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     height: rem(78);
+  }
 
-    div {
-      margin-left: auto;
+  .menu__outer {
+    display: none;
+  }
+
+  .menu__toggle {
+    font-size: rem(55);
+    text-align: right;
+  }
+
+  .menu__box {
+    transition: top var(--transition-min);
+    box-shadow: 0 0 rem(10) var(--black) inset;
+    background: var(--gray-400);
+    position: absolute;
+    top: rem(-230);
+    left: 0;
+    height: rem(230);
+    width: 100%;
+    z-index: -1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: rem(25);
+
+    li:not(:last-child) {
+      margin-bottom: rem(20);
     }
+  }
+
+  .menu__open .menu__box {
+    top: rem(78);
   }
 }
