--- a/course/app/scss/globals/boilerplate.scss
+++ b/course/app/scss/globals/boilerplate.scss
@@ -22,7 +22,11 @@ body {
 	padding: 0;
 	font-family: var(--font-body);
 
-	@include breakpoint-down(small) {
+	@include breakpoint-down(medium) {
+
+		.account__menu {
+			right: auto;
+		}
 
 		canvas {
 			display: none !important;
