--- a/course/app/scss/components/header.scss
+++ b/course/app/scss/components/header.scss
@@ -5,6 +5,15 @@
   font-weight: 700;
 
   @include breakpoint-down(medium) {
+
+    &__inner>input {
+      display: none;
+    }
+
+    .btns {
+      display: none;
+    }
+
     div.menu {
       display: none;
     }
@@ -12,6 +21,10 @@
     div.menu__outer {
       display: block;
       padding: 0 !important;
+    }
+
+    a.menu--active {
+      box-shadow: none;
     }
   }
 
@@ -22,7 +35,8 @@
     width: 100%;
 
     &--active {
-      box-shadow: 0 rem(10) 0 var(--brand) inset;
+      color: var(--white);
+      box-shadow: 0 rem(10) 0 var(--white) inset;
     }
 
     ul {
@@ -61,29 +75,46 @@
 
   .menu__toggle {
     font-size: rem(55);
-    text-align: right;
+    height: rem(78);
   }
 
   .menu__box {
-    transition: top var(--transition-min);
+    transition: color var(--transition-min);
     box-shadow: 0 0 rem(10) var(--black) inset;
     background: var(--gray-400);
-    position: absolute;
+    position: fixed;
     top: rem(-230);
     left: 0;
     height: rem(230);
     width: 100%;
-    z-index: -1;
+    z-index: 1;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     text-transform: uppercase;
     text-align: center;
-    font-size: rem(25);
+    font-size: rem(20);
 
-    li:not(:last-child) {
-      margin-bottom: rem(20);
+    li {
+
+      &:not(:first-child) {
+        margin-top: rem(20);
+      }
+
+      input {
+        box-shadow: none;
+      }
+
+      a {
+
+        &:nth-child(odd) {
+          margin-right: rem(20);
+        }
+
+        &:hover {
+          color: var(--white);
+        }
+      }
     }
   }
 
