--- a/course/app/scss/globals/boilerplate.scss
+++ b/course/app/scss/globals/boilerplate.scss
@@ -110,7 +110,7 @@ body {
 	.wave {
 		overflow: hidden;
 		position: absolute;
-		bottom: rem(-2);
+		bottom: 0;
 		width: 100%;
 		height: rem(100);
 
@@ -188,6 +188,6 @@ body {
 	footer {
 		text-align: center;
 		color: var(--gray-400);
-		padding: 20px 0;
+		padding: rem(20) 0;
 	}
 }
