--- a/course/app/scss/components/job.scss
+++ b/course/app/scss/components/job.scss
@@ -15,9 +15,12 @@
     padding: rem(20);
     border-radius: rem(20);
     border: rem(1) solid var(--gray-400);
-    margin-bottom: rem(40);
     word-wrap: break-word;
     position: relative;
+
+    &:not(:last-child) {
+      margin-bottom: rem(40);
+    }
 
     div:last-child {
       display: flex;
