--- a/course/app/scss/globals/typography.scss
+++ b/course/app/scss/globals/typography.scss
@@ -44,8 +44,7 @@ a {
 input:not([type=radio]),
 textarea {
 	border: rem(2) solid var(--gray-400);
-	padding: rem(12) rem(80) rem(12) rem(20);
-	box-shadow: rem(-6) 0 0 var(--gray-400) inset;
+	padding: rem(12) rem(20);
 }
 
 textarea {
@@ -61,12 +60,12 @@ textarea {
 input[type=submit] {
 	font-weight: 700;
 	font-size: rem(18);
-	background-color: transparent;
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
 	overflow: hidden;
 	color: var(--brand);
+	background-color: var(--white);
 	border: rem(2) solid var(--brand);
 	transition: var(--transition-min);
 	padding: rem(5) rem(20);
@@ -134,6 +133,6 @@ input[type=submit] {
 	}
 }
 
-span:not(.error) {
+span {
 	color: var(--brand);
 }
