--- a/course/app/scss/components/description.scss
+++ b/course/app/scss/components/description.scss
@@ -1,10 +1,12 @@
 @use '../util' as *;
 
+// Родитель описания
 .description {
   display: flex;
   align-items: center;
   text-align: right;
 
+  // Адаптив описания
   @include breakpoint-down(medium) {
     flex-direction: column;
     text-align: center;
@@ -25,6 +27,7 @@
     width: 50%;
   }
 
+  // Слайдер работников
   .worker {
     width: rem(240);
     height: rem(320);
@@ -52,6 +55,7 @@
         background-color: var(--black);
       }
 
+      // Цвета работников
       &:nth-child(1n) {
         background-color: rgba(206, 17, 17, .8);
 
@@ -82,6 +86,7 @@
       }
     }
 
+    // Звезды работников
     &__stars {
       position: relative;
       bottom: rem(38);
