--- a/course/app/scss/globals/boilerplate.scss
+++ b/course/app/scss/globals/boilerplate.scss
@@ -1,5 +1,6 @@
 @use '../util' as *;
 
+// Родительские стили
 html {
 	box-sizing: border-box !important;
 	scroll-behavior: smooth;
@@ -11,17 +12,20 @@ html {
 	}
 }
 
+// Расчет отступов
 *,
 *::before,
 *::after {
 	box-sizing: inherit !important;
 }
 
+// Общие стили
 body {
 	margin: 0;
 	padding: 0;
 	font-family: var(--font-body);
 
+	// Адаптив
 	@include breakpoint-down(medium) {
 		text-align: center;
 
@@ -34,14 +38,14 @@ body {
 		}
 	}
 
-	// Three.js
+	// 3D модель шара
 	canvas {
 		position: absolute;
 		top: rem(200);
 		right: 0;
 	}
 
-	// Popup
+	// Область попапа
 	.overlay {
 		position: fixed;
 		top: 0;
@@ -67,6 +71,7 @@ body {
 		}
 	}
 
+	// Попап
 	.popup {
 		padding: rem(40);
 		margin: rem(100) auto;
@@ -88,6 +93,7 @@ body {
 			width: 100%;
 		}
 
+		// Крест попапа
 		.close {
 			position: absolute;
 			width: rem(20);
@@ -107,7 +113,7 @@ body {
 		}
 	}
 
-	// Wave
+	// Волна
 	.wave {
 		overflow: hidden;
 		position: absolute;
@@ -125,6 +131,7 @@ body {
 		}
 	}
 
+	// Анимация волны
 	@keyframes wave {
 		0% {
 			transform: translateX(0) scaleY(1);
@@ -139,7 +146,7 @@ body {
 		}
 	}
 
-	// Loader
+	// Загрузка страницы
 	.loader {
 		position: fixed;
 		z-index: 50;
@@ -167,6 +174,7 @@ body {
 			}
 		}
 
+		// Анимация загрузки страницы
 		@keyframes loading {
 			0% {
 				stroke: var(--brand);
@@ -186,6 +194,7 @@ body {
 		}
 	}
 
+	// Подвал
 	footer {
 		text-align: center;
 		color: var(--gray-400);
