--- a/course/assets/css/animate.css
+++ b/course/assets/css/animate.css
@@ -1,12 +1,13 @@
 @charset "UTF-8";
 
-/*!
+/*
  * animate.css - https://animate.style/
  * Version - 4.1.1
  * Licensed under the MIT license - http://opensource.org/licenses/MIT
  *
  * Copyright (c) 2020 Animate.css
  */
+
 :root {
   --animate-duration: 1s;
   --animate-delay: 1s;
